--- a/src/style/components/_buttons.scss
+++ b/src/style/components/_buttons.scss
@@ -21,6 +21,7 @@
   }
 }
 
+
 /* Hero Style */
 .cta-btn--hero {
   background-image: linear-gradient(135deg, $primary-color 0%, $secondary-color 100%);
@@ -62,6 +63,8 @@
 
 /* Resume Style */
 .cta-btn--resume {
+  margin-bottom: 2%;
+  margin-top: 2%;
   color: $white-color;
   border: 2px solid $white-color;
 
