--- a/src/style/layout/_blog.scss
+++ b/src/style/layout/_blog.scss
@@ -1,6 +1,17 @@
 .blogText {
    text-align: start;
-   padding-left: 20%;
-   padding-right: 20%;
+   padding-left: 42%;
+   padding-right: 30%;
    padding-top: 20px;
+}
+
+.blogBody {
+   padding-right: 30%;
+   padding-top: 0;
+}
+
+.home {
+   padding-top: 0px;
+   padding-left: 25%;
+   padding-bottom: 0;
 }
