--- a/src/style/layout/_footer.scss
+++ b/src/style/layout/_footer.scss
@@ -40,7 +40,7 @@
 .social-links {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: start;
 
   a {
     display: flex;
