--- a/src/style/layout/_blog.scss
+++ b/src/style/layout/_blog.scss
@@ -1,17 +1,21 @@
 .blogText {
    text-align: start;
-   padding-left: 42%;
+   padding-left: 30%;
    padding-right: 30%;
    padding-top: 20px;
 }
 
 .blogBody {
    padding-right: 30%;
+   padding-left: 30%;
    padding-top: 0;
+   font-weight: bold;
+   text-transform: uppercase;
 }
 
 .home {
    padding-top: 0px;
-   padding-left: 25%;
+   padding-left: 10%;
+   padding-right: 10%;
    padding-bottom: 0;
 }
