--- a/src/style/layout/_blog.scss
+++ b/src/style/layout/_blog.scss
@@ -19,3 +19,10 @@
    padding-right: 10%;
    padding-bottom: 0;
 }
+
+.blogpage {
+   padding-top: 40px;
+   padding-left: 10%;
+   padding-right: 10%;
+   padding-bottom: 0;  
+}
