--- a/src/style/layout/_blog.scss
+++ b/src/style/layout/_blog.scss
@@ -5,6 +5,13 @@
    padding-top: 20px;
 }
 
+.blogText {
+   text-align: start;
+   padding-left: 10%;
+   padding-right: 10%;
+   padding-top: 20px;
+}
+
 .blogBody {
    padding-right: 30%;
    padding-left: 30%;
