add default layout

--- a/src/style/layout/_blog.scss
+++ b/src/style/layout/_blog.scss
@@ -31,7 +31,8 @@
    padding-top: 40px;
    padding-left: 10%;
    padding-right: 10%;
-   padding-bottom: 0;  
+   padding-bottom: 0;
+   text-align: start;
 }
 
 .image {
